<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_id"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="#0277BD" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_nombre"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="#0277BD" />

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_apellido"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#0277BD" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_username"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#0277BD" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_password"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="#0277BD" />

        <TextView
            android:id="@+id/tv_fechanac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/tv_userfecha"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_editfechanac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/Error"
            android:text="@string/Error"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#0277BD" />

    </LinearLayout>
</ScrollView>